<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <!-- Linkes Label -->
        <TextView
            android:id="@+id/txtAccuracyStepTitleLabelLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_accuracy_step_left"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <!-- Mittelwert -->
        <TextView
            android:id="@+id/txtAccuracyStepTitleValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_placeholder"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"/>

        <!-- Rechtes Label -->
        <TextView
            android:id="@+id/txtAccuracyStepTitleLabelRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_accuracy_step_right"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>



    <!-- Chart -->
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/stockDataChartHistory"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/titleContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView für historische Predictions -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recPredictionsHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/stockDataChartHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
